@@ -1,4 +1,10 @@
-﻿drkns 30.12.2015 17:05:27 +0200 - build 4498
+﻿zg 31.12.2015 20:03:12 +0200 - build 4499
+
+1. падение в GetPluginDirList. возвращалась освобождённая память.
+
+2. gcc warning.
+
+drkns 30.12.2015 17:05:27 +0200 - build 4498
 
 1. Продолжение 3596. Более параноидальная работа с адаптерами.
 
